# claude-poly-arbi

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  dev.sh
crates/arb-api/: Cargo.toml
crates/arb-api/src/: engine_task.rs  main.rs  state.rs  ws.rs
crates/arb-api/src/routes/: config.rs  control.rs  health.rs  helpers.rs  history.rs  markets.rs  metrics.rs  mod.rs  opportunities.rs  optimize.rs  order.rs  orders.rs  positions.rs  sandbox.rs  simulate.rs  status.rs  stress.rs  verify.rs
crates/arb-core/: Cargo.toml
crates/arb-core/src/: config.rs  error.rs  lib.rs  traits.rs  types.rs
crates/arb-daemon/: Cargo.toml
crates/arb-daemon/src/: engine.rs  export.rs  main.rs
crates/arb-daemon/src/commands/: config.rs  history.rs  kill.rs  mod.rs  resume.rs  run.rs  scan.rs  simulate.rs  status.rs
crates/arb-data/: Cargo.toml
crates/arb-data/src/: correlation.rs  impact.rs  lib.rs  local_book.rs  market_cache.rs  orderbook.rs  poller.rs  price_history.rs  vwap_cache.rs  ws_feed.rs
crates/arb-execution/: Cargo.toml
crates/arb-execution/src/: auth.rs  executor.rs  lib.rs  paper_trade.rs  preflight.rs  quote_manager.rs  rate_limiter.rs  slippage.rs
crates/arb-monitor/: Cargo.toml
crates/arb-monitor/src/: alerts.rs  lib.rs  logger.rs  webhook.rs
crates/arb-risk/: Cargo.toml
crates/arb-risk/src/: circuit_breaker.rs  kill_switch.rs  lib.rs  limits.rs  metrics.rs  position_tracker.rs  stress_test.rs  var.rs
crates/arb-simulation/: Cargo.toml
crates/arb-simulation/src/: agent_model.rs  convergence.rs  copula.rs  estimator.rs  importance_sampling.rs  jump_diffusion.rs  lib.rs  monte_carlo.rs  particle_filter.rs  variance_reduction.rs
crates/arb-strategy/: Cargo.toml
crates/arb-strategy/src/: cross_market.rs  deadline.rs  edge.rs  intra_market.rs  lib.rs  liquidity_sniping.rs  market_making.rs  multi_outcome.rs  prob_model.rs  resolution_sniping.rs  stale_market.rs  volume_spike.rs
deploy/: arb-engine.service
docs/: README.md  api-reference.md  architecture.md  common-ui-components.md  configuration.md  crate-specs.md  frontend-guide.md  implementation-plan.md
docs/plans/: 2026-03-01-comprehensive-scanner-design.md  2026-03-01-comprehensive-scanner-plan.md  2026-03-01-frontend-dashboard-design.md  2026-03-01-frontend-dashboard.md  2026-03-02-strategy-playground-design.md  2026-03-02-strategy-playground-plan.md  2026-03-03-long-term-improvement-design.md  2026-03-03-long-term-improvement-plan.md
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/controls/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/markets/: page.tsx
frontend/src/app/markets/[id]/: page.tsx
frontend/src/app/opportunities/: page.tsx
frontend/src/app/performance/: page.tsx
frontend/src/app/positions/: page.tsx
frontend/src/app/simulation/: page.tsx
frontend/src/app/simulation/stress-test/: page.tsx
frontend/src/components/: advanced-filter-panel.tsx  arb-opportunity-badge.tsx  brier-score-trend.tsx  connection-status.tsx  convergence-diagnostics-chart.tsx  daily-pnl-calendar.tsx  data-table.tsx  edge-distribution-histogram.tsx  event-group-table.tsx  expiry-progress-bar.tsx  hot-markets-carousel.tsx  kill-switch-banner.tsx  liquidity-depth-bar.tsx  liquidity-depth-profile.tsx  market-card-grid.tsx  market-health-badge.tsx  market-metadata-card.tsx  market-microstructure-panel.tsx  market-treemap.tsx  market-watchlist.tsx  metric-card.tsx  opportunity-row.tsx  order-form.tsx  order-imbalance-arrow.tsx  order-imbalance-chart.tsx  orderbook-depth.tsx  orderbook-ladder.tsx  outcome-probability-panel.tsx  pnl-chart.tsx  position-pnl-waterfall.tsx  prob-sum-badge.tsx  probability-stacked-bar.tsx  risk-gauge.tsx  sidebar.tsx  simulation-quick-view.tsx  simulation-status.tsx  slippage-scatter-enhanced.tsx  spread-histogram.tsx  spread-severity-gauge.tsx  spread-volume-scatter.tsx  (+3 more)
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  scroll-area.tsx  select.tsx  sheet.tsx  sonner.tsx  switch.tsx  table.tsx  tabs.tsx
frontend/src/hooks/: use-websocket.ts
frontend/src/lib/: api.ts  strategy-utils.ts  types.ts  utils.ts
frontend/src/store/: index.ts
polymarket-cli-main/polymarket-cli-main/: .gitignore  install.sh
polymarket-cli-main/polymarket-cli-main/src/: auth.rs  config.rs  lib.rs  main.rs  shell.rs
polymarket-cli-main/polymarket-cli-main/src/commands/: approve.rs  bridge.rs  clob.rs  comments.rs  data.rs  events.rs  markets.rs  mod.rs  profiles.rs  series.rs  sports.rs  tags.rs  upgrade.rs
polymarket-cli-main/polymarket-cli-main/src/output/: approve.rs  bridge.rs  clob.rs  comments.rs  ctf.rs  data.rs  events.rs  markets.rs  mod.rs  profiles.rs  series.rs  sports.rs  tags.rs
scripts/: dev.sh
tasks/: lessons.md  todo.md
