[package]
name = "arb-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Polymarket arb REST + WebSocket API server"

[[bin]]
name = "arb-api"
path = "src/main.rs"

[dependencies]
arb-core = { workspace = true }
arb-data = { workspace = true }
arb-strategy = { workspace = true }
arb-simulation = { workspace = true }
arb-execution = { workspace = true }
arb-risk = { workspace = true }
arb-monitor = { workspace = true }
polymarket-client-sdk = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
async-trait = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
axum = { version = "0.8", features = ["ws", "json"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
futures-util = "0.3"
