[package]
name = "arb-monitor"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Structured logging, alerts, and performance monitoring"

[dependencies]
arb-core = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
