[package]
name = "arb-risk"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Risk management: position limits, kill switch, PnL tracking, Brier scores"

[dependencies]
arb-core = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
uuid = { workspace = true }
