[package]
name = "arb-simulation"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Monte Carlo, particle filter, copula, and agent-based simulation engine"

[dependencies]
arb-core = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rust_decimal = { workspace = true }
nalgebra = { workspace = true }
statrs = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
